infra/k8s/comments-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: robsongomes/comments:0.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: comments-svc
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4000
      targetPort: 4000
