infra/k8s/eventbus-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
        - name: eventbus
          image: robsongomes/eventbus:0.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-svc
spec:
  type: NodePort
  selector:
    app: eventbus
  ports:
    - name: eventbus
      protocol: TCP
      port: 4005
      targetPort: 4005
