infra/k8s/moderation-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: robsongomes/moderation:0.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-svc
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4000
      targetPort: 4000
