infra/k8s/posts-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: robsongomes/posts:0.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
