infra/k8s/query-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: robsongomes/query:0.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: query-svc
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4000
      targetPort: 4000
